cmake_minimum_required(VERSION 3.24)
project(cCode C)

set(CMAKE_C_STANDARD 99)

add_executable(cCode main.c)

add_executable(main main.c)


include_directories(outputArray.h)

add_executable(bubble_sort bubble_sort.c)
add_executable(Day09_01 Day09_01.c)
add_executable(Day09_02 Day09_02.c)
add_executable(Day09_03 Day09_03.c)

add_executable(Day_10_the_effective_num Day10_the_effective_num.c)
add_executable(Day10_point_array Day10_point_array.c)
add_executable(login Day10_login.c)
add_executable(Day11_compress_string Day11_compression_string.c)
add_executable(Day11_bubble_sort_pointer Day11_bubble_sort_pointer.c)
add_executable(Day11_decompression_string Day11_decompression_string.c)
add_executable(Day11_test_compression_and_decompression Day11_test_compression_and_decompression.c)
add_executable(Day12_visit_two_dimension_array Day12_visit_two_dimension_array_use_array_pointer.c)

add_executable(Day13_main Day13_main.c)

add_executable(Day13_add Day13_add.c)
add_executable(Day13_function_excange_two_number Day13_function_excange_two_number.c)
add_executable(Day13_exclude_space Day13_exclude_space.c)
add_executable(Day14_function_sum_two_dimensional_array Day14_function_sum_two_dimensional_array.c)
add_executable(Day14_reverse_string Day14_reverse_string.c)
add_executable(test test.c)
add_executable(Day15_struct_define Day15_struct_define.c)
add_executable(Day11_convert_char_to_int Day11_convert_char_to_int.c)
add_executable(Day15_exclude_space Day15_exclude_space.c)

add_executable(Day16_c_examples03 Day16_c_examples03.c)
add_executable(Day17_move_array_by_number Day17_move_array_by_number.c)
add_executable(Day17_leecode_2169 Day17_leecode_2169.c)
add_executable(Day17_leecode_2185 Day17_leecode_2185.c)
add_executable(Day18_homeword Day18_homeword.c)
add_executable(Day18_leecode_70 Day18_leecode_70.c)
add_executable(Day18_leecode_26 Day18_leecode_26.c)
add_executable(Day19_funcion_pointer Day19_funcion_pointer.c)
add_executable(Day19_jiec_sum Day19_homework_01_jiec_sum.c)
add_executable(Day19_malloc Day19_malloc.c)
add_executable(Day19_define Day19_define.c)
add_executable(Day19_struct Day19_struct.c)
add_executable(Day19_homeword02 Day19_homeword_02_calc_the_data.c)
add_executable(Day19_homework_jiec_sum Day19_homework_01_jiec_sum.c)
add_executable(Day19_homeword_02_calc_the_data_v02 Day19_homeword_02_calc_the_data_v02.c)
add_executable(Day19_leecode_121 Day19_leecode_121.c)
add_executable(Day20_struct Day20_struct.c)
add_executable(Day20_enum Day20_enum.c)
add_executable(Day20_week_homework Day20_week_homework.c)
add_executable(Day20_weekl_homework_02 Day20_weekl_homework_02.c)
add_executable(Day21_leecode_1025 Day21_leecode_1025.c Day21_leecode_1025.c)
add_executable(Day22_leecode_1614 Day22_leecode_1614.c)
add_executable(Day23_exame02 Day23_exame02.c)
add_executable(Day23_exame03 Day23_exame03.c)
add_executable(Day22_leecode_206 Day22_leecode_206.c)

add_executable(Day23_sequence_list Day23_sequence_list.c)
add_executable(Day22_leecode_206_v2 Day23_leecode_206_v2.c)
add_executable(Day23_leecode_73 Day23_leecode_73.c)
add_executable(Day24_leecode_387 Day24_leecode_387.c)
add_executable(Day24_leecode_1160 Day24_leecode_1160.c)
add_executable(Day24_leecode_203 Day24_leecode_203.c)
add_executable(Day25_link_node Day25_link_node.c)
add_executable(Day25_leecode_705 Day25_leecode_705.c)
add_executable(Day25_leecode_21 Day25_leecode_21.c)
add_executable(Day25_homeword1 Day25_homeword1.c)
add_executable(Day25_stack Day25_stack.c)
add_executable(Day25_queue Day25_queue.c)
add_executable(Day26_leecode_144 Day26_leecode_144.c)
add_executable(Day26_leecode_88 Day26_leecode_88.c)
add_executable(Day215_week_loop_link Day215_week_loop_link.c)